--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
 		"cub3d.h": "c",
 		"fcntl.h": "c",
 		"sstream": "c",
-		"get_next_line.h": "c"
+		"get_next_line.h": "c",
+		"ios": "c",
+		"util_safe_libft.h": "c"
 	}
 }
