add_background&fix_identifier_parse

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
 		"sstream": "c",
 		"get_next_line.h": "c",
 		"ios": "c",
-		"util_safe_libft.h": "c"
+		"util_safe_libft.h": "c",
+		"util_img.h": "c"
 	}
 }
