add minimap & change vector

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,10 @@
 		"ios": "c",
 		"util_safe_libft.h": "c",
 		"util_img.h": "c",
-		"complex": "c"
+		"complex": "c",
+		"array": "c",
+		"string": "c",
+		"string_view": "c",
+		"vector": "c"
 	}
 }
