libft makefile modify 'gcc' to 'cc'

--- a/cub3d_bonus/libft_for_cub3d/Makefile
+++ b/cub3d_bonus/libft_for_cub3d/Makefile
@@ -3,16 +3,16 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: jaeyjeon <@student.42seoul.kr>             +#+  +:+       +#+         #
+#    By: jiwolee <jiwolee@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/11/20 19:29:07 by jaeyjeon          #+#    #+#              #
-#    Updated: 2022/01/20 02:08:30 by jaeyjeon         ###   ########.fr        #
+#    Updated: 2023/02/09 14:18:06 by jiwolee          ###   ########seoul.kr   #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		= libft.a
 
-CC			= gcc
+CC			= cc
 RM			= rm -rf
 CFLAGS		= -Wall -Wextra -Werror
 
